--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@ Makefile*
 #QtCtreator Qml
 *.qmlproject.user
 *.qmlproject.user.*
+
+#Release binary
+release/*.cpp
+release/*.res
+release/*.exp
+release/*.obj
+release/*.lib
+
+*.rc
+*_plugin_import*
