Modernize the code
* Certain variables were made use auto keyword
* Syntax of various functions were updated
* Integrated font was fixed
* Slight optimizations were made
* Qt built-in functions/macros were excluded from linting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,18 @@
 cmake_minimum_required(VERSION 3.21.1)
 project(UndertaleSaveEditor VERSION 2.0.0.0 LANGUAGES CXX)
 
+include(CheckIPOSupported)
+check_ipo_supported(RESULT supported OUTPUT error)
+
+if(!supported)
+	message(FATAL_ERROR "Interprocedural Optimization is not supported: ${output}")
+endif()
+
 find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core)
 
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Network Widgets)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -44,6 +51,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	WIN32_EXECUTABLE ON
 	MACOSX_BUNDLE ON
+	INTERPROCEDURAL_OPTIMIZATION TRUE
 )
 
 # Resources:
