Update the project
* Prepare files for the "Web Edition"
* Use C++20 for balance with compatibility and features
* Change the default update delay to 30 days to avoid "spamming" the network
* Fix an error with a special checkbox giving inccorect values

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,14 @@ compile_commands.json
 *creator.user*
 *_qmlcache.qrc
 
+# WebStorm files
+/.idea
+
+# VS Code files
+/.vscode
+
 # Compiler files
 /release
 /debug
+/build
 *_plugin_import*
